--- a/rendu.html
+++ b/rendu.html
@@ -30,44 +30,16 @@
 		<script>
 
 
-			var getSourceSynch = function(url) {
-				var req = new XMLHttpRequest();
-				req.open("GET", url, false);
-				req.send(null);
-				//return (req.status == 200) ? req.responseText : null;
-				return req.responseText;
-			};
 
-
-			/*function loadTextFile(url, callback) {
-				var request = new XMLHttpRequest();
-				request.open('POST', url, true);
-				request.addEventListener('load', function() {
-					callback(request.responseText);
-				})
-				request.send();
-			}*/
-
-		var scene, camera, renderer, gui, params, light2;
-		//, plane, selection, clock;
-		/*var raycaster = new THREE.Raycaster();
-		var offset = new THREE.Vector3();
-		var objects = [];
-		var positions = [];*/
-
-		
+		var scene, camera, renderer, gui, params, parse;
 		var zip = new JSZip();
 		var nbImage = 0;
-		var parse;
 		var no = 1;
 		var newID;
 
 			
 		loadAll();
 			
-		
-	
-
 				
 		function init() {
 
@@ -82,16 +54,9 @@
       		renderer.shadowMapSoft = true;
 
 			document.body.appendChild(renderer.domElement);
-
-			if (parse.parameters.camera.type === 'ortho') {
-				camera = new THREE.OrthographicCamera( WIDTH / - 2, WIDTH / 2, HEIGHT / 2, HEIGHT / - 2, parse.parameters.camera.near, parse.parameters.camera.far); 
-			} else {
-				camera = new THREE.PerspectiveCamera(parse.parameters.camera.fov, WIDTH / HEIGHT, parse.parameters.camera.near, parse.parameters.camera.far);
-			}
-
-			camera.position.set(parse.parameters.camera.position.x,parse.parameters.camera.position.y,parse.parameters.camera.position.z);
-			camera.up.set(0,0,1);
-			scene.add(camera);
+			
+			loadCam(WIDTH, HEIGHT);
+			
 			
 			window.addEventListener('resize', function() {		
 				var WIDTH = window.innerWidth,
@@ -102,38 +67,9 @@
 			});
 			window.addEventListener("keyup", capture);
 
-
-			light2 = new THREE.DirectionalLight(0xffffff, 1.0);
-			light2.position.set(parse.parameters.light.position.x,parse.parameters.light.position.y,parse.parameters.light.position.z);
-
-			light2.castShadow = true;
-			light2.shadowDarkness = 1.0;
-			light2.shadow.camera.far = 1500;
-			light2.shadow.camera.near = 100;	// keep near and far planes as tight as possible
-
-			light2.shadow.camera.right     =  550;
-			light2.shadow.camera.left     = -550;
-			light2.shadow.camera.top    =  550;
-			light2.shadow.camera.bottom  = -550;
-
-			light2.shadowMapWidth = 4096;    // power of 2
-			light2.shadowMapHeight = 4096;
-    
-    		//light2.shadowCameraFov = 200;
-			//évite l'effet d'ombre du au DoubleSide des materials
-    		light2.shadowBias = -0.001; 
-
-			var helper = new THREE.CameraHelper( light2.shadow.camera );
-			//scene.add( helper );
-			scene.add(light2);
-
-
-			var ambientLight = new THREE.AmbientLight( 0xffffff, 0.8 ); // soft white light
-			scene.add( ambientLight );
+			loadLights();
 			
-			//controls
-			controls = new THREE.OrbitControls(camera, renderer.domElement);
-			controls.target.set( -50, 30, 0 );
+
 
 		}	
 			
