--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 		<!--</div>-->
 		<!-- ACTUS -->
         <div class="container">
+			<p class="languageFr">6-9/12/2016: <strong>Présentation d'un poster <a href="#"> Projet PLU++ : vers un Plan Local d’Urbanisme plus intelligible et plus participatif </a> à la conférence <a href="https://sageo2016.sciencesconf.org/">Sagéo 2016 </a> à Nice. </p>
+			<p class="languageEn">6-9/12/2016: <strong>Presentation of a poster <a href="#"> Projet PLU++ : vers un Plan Local d’Urbanisme plus intelligible et plus participatif </a> during  <a href="https://sageo2016.sciencesconf.org/">Sagéo 2016 </a> inNice. </p>
+			<p class="languageFr">20/10/2016: <strong>Présentation <a href="http://www.slideshare.net/MBrasebin/schristophe3dgeoinfo2016"> 3D geovisualization & stylization to manage comprehensive and participative local urban plans </a> à la conférence <a href="http://3dathens2016.gr/site/">10e conférence 3D GeoInfo </a> à Athènes. </p>
+			<p class="languageEn">20/10/2016: <strong>Presentation <a href="http://www.slideshare.net/MBrasebin/schristophe3dgeoinfo2016"> 3D geovisualization & stylization to manage comprehensive and participative local urban plans</a> during the <a href="http://3dathens2016.gr/site/">10th 3D GeoInfo conference</a> in Athens. </p>
 			<p class="languageFr">20/10/2015: <strong>Présentation <a href="http://fr.slideshare.net/MBrasebin/projet-plu"> du projet PLU++</a> aux <a href="http://www.fnau.org/reseau-agences/manifestations-rencontres.asp?annee=2015">36e rencontres des agences d'urbanisme</a> à Lyon. </p>
 			<p class="languageEn">20/10/2015: <strong>Presentation of <a href="http://fr.slideshare.net/MBrasebin/projet-plu"> PLU++ project</a> during the <a href="http://www.fnau.org/reseau-agences/manifestations-rencontres.asp?annee=2015">36th French urban planners meeting</a> in Lyon. </p>
 		</div> <!-- fin container -->
@@ -367,7 +371,7 @@ Related projects :<br /><br />
                     <div class="row">
                         <div class="portfolio-items isotopeWrapper clearfix" id="3">
 
-					<article class="col-md-4 isotopeItem cartes">
+					<article class="col-md-4 isotopeItem images">
 								<div class="portfolio-item">
 									<img src="img/gallerie/discret_pr_opaque_sans_aretes.png" alt="" />
 									<div class="portfolio-desc align-center">
@@ -379,8 +383,103 @@ Related projects :<br /><br />
 									</div>
 								</div>
                             </article>
+
+
+					<article class="col-md-4 isotopeItem images">
+								<div class="portfolio-item">
+									<img src="img/gallerie/arbres.png" alt="" />
+									<div class="portfolio-desc align-center">
+										<div class="folio-info">
+											<h5 class="languageFr"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Ajout d'arbres et rendu crayonné pour les toits des bâtiments</a></h5>
+											<h5 class="languageEn"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Addition of tree models and pencil rendering for roof surfaces</a></h5>
+											<a href="img/gallerie/discret_pr_opaque_sans_aretes.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+										</div>
+									</div>
+								</div>
+                            </article>
+
+					<article class="col-md-4 isotopeItem images">
+								<div class="portfolio-item">
+									<img src="img/gallerie/Aretes_sketchy.png" alt="" />
+									<div class="portfolio-desc align-center">
+										<div class="folio-info">
+											<h5 class="languageFr"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Arêtes sketchy</a></h5>
+											<h5 class="languageEn"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Sketchy edges</a></h5>
+											<a href="img/gallerie/discret_pr_opaque_sans_aretes.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+										</div>
+									</div>
+								</div>
+                            </article>
+
+
+					<article class="col-md-4 isotopeItem images">
+								<div class="portfolio-item">
+									<img src="img/gallerie/contexte_BDTopoblanc.png" alt="" />
+									<div class="portfolio-desc align-center">
+										<div class="folio-info">
+											<h5 class="languageFr"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Contexte discret</a></h5>
+											<h5 class="languageEn"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">White context</a></h5>
+											<a href="img/gallerie/discret_pr_opaque_sans_aretes.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+										</div>
+									</div>
+								</div>
+                            </article>
+
+
+					<article class="col-md-4 isotopeItem images">
+								<div class="portfolio-item">
+									<img src="img/gallerie/hatching.PNG" alt="" />
+									<div class="portfolio-desc align-center">
+										<div class="folio-info">
+											<h5 class="languageFr"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Rendu crayonné pour un bâtiment</a></h5>
+											<h5 class="languageEn"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Pencil rendering for a building</a></h5>
+											<a href="img/gallerie/discret_pr_opaque_sans_aretes.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+										</div>
+									</div>
+								</div>
+                            </article>
+
+
+					<article class="col-md-4 isotopeItem images">
+								<div class="portfolio-item">
+									<img src="img/gallerie/red.png" alt="" />
+									<div class="portfolio-desc align-center">
+										<div class="folio-info">
+											<h5 class="languageFr"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Bâtiment transparent avec arêts sketcy</a></h5>
+											<h5 class="languageEn"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Transparent building with sketchy edges</a></h5>
+											<a href="img/gallerie/discret_pr_opaque_sans_aretes.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+										</div>
+									</div>
+								</div>
+                            </article>
+
+					<article class="col-md-4 isotopeItem images">
+								<div class="portfolio-item">
+									<img src="img/gallerie/red.png" alt="" />
+									<div class="portfolio-desc align-center">
+										<div class="folio-info">
+											<h5 class="languageFr"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Délimitation des étages par la symbologie</a></h5>
+											<h5 class="languageEn"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Symbologie-based floors representation</a></h5>
+											<a href="img/gallerie/discret_pr_opaque_sans_aretes.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+										</div>
+									</div>
+								</div>
+                            </article>
+
+					<article class="col-md-4 isotopeItem images">
+								<div class="portfolio-item">
+									<img src="img/gallerie/violet.png" alt="" />
+									<div class="portfolio-desc align-center">
+										<div class="folio-info">
+											<h5 class="languageFr"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Rendu sketchy violet</a></h5>
+											<h5 class="languageEn"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Purple sketchy rendering</a></h5>
+											<a href="img/gallerie/discret_pr_opaque_sans_aretes.png" class="fancybox"><i class="fa fa-plus fa-2x"></i></a>
+										</div>
+									</div>
+								</div>
+                            </article>
 							
-							<article class="col-md-4 isotopeItem cartes">
+							<article class="col-md-4 isotopeItem images">
 								<div class="portfolio-item">
 									<img src="img/gallerie/typique_pr_toit_tuiles_sans_aretes_fonce.png" alt="" />
 									<div class="portfolio-desc align-center">
@@ -417,13 +516,24 @@ Related projects :<br /><br />
 								<div class="flex-video widescreen">
 				<iframe src="http://fr.slideshare.net/slideshow/embed_code/key/xwV0Ki6GdNJeM9" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
 								</div>
-							</article>					
+							</article>
+
+						<article class="media hidden col-md-4 isotopeItem presentations">
+								<div class="flex-video widescreen">
+				<iframe src="http://www.slideshare.net/slideshow/embed_code/key/o9y7y5B1bpqhl9" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe>
+								</div>
+							</article>
+
+					
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
+
+
 
 	<!-- spacer section:style -->
 	<section id="style" class="section mar-top40 mar-bot40" data-stellar-background-ratio="0.8"></section>
@@ -443,7 +553,24 @@ Related projects :<br /><br />
 						<p class="languageEn">List of publications of the project.</p>
 					</div>
 				</div>
+
+<div class="row">
+				<div class="col-md-12">
+		
+	
+						<div class="panel-body">
+							<ul>
+								<li class="bib">
+<em>M. Brasebin, S. Christophe, F. Jacquinod, A. Vinesse, and H. Mahon</em>, 2016, <a href="http://www.isprs-ann-photogramm-remote-sens-spatial-inf-sci.net/IV-2-W1/83/2016/">3D geovisualization & stylization to manage comprehensive and participative local urban plans</a>, ISPRS Ann. Photogramm. Remote Sens. Spatial Inf. Sci., IV-2-W1, 83-91, doi:10.5194/isprs-annals-IV-2-W1-83-2016.						
+								</li>
+								<li class="bib">
+<em>M. Brasebin, S. Christophe, F. Jacquinod, A. Vinesse, and H. Mahon</em>, 2016, Projet PLU++ : vers un Plan Local d’Urbanisme plus intelligible et plus participatif, Actes du Colloque International de Géomatique et d'Analyse Spatiale (SAGEO 2016),  6 - 9 décembre 2016, Nice, France
+								</li>
+							</ul>
+						</div>
+
 			</div>
+</div>
 			<!-- 		<div class="row">
 				<div class="col-md-12">
 					<div class="panel panel-default">
@@ -777,7 +904,7 @@ Related projects :<br /><br />
 			</div>
 
 			<div class="row align-center copyright">
-					<div class="col-sm-12"><p>Copyright &copy; 2015 IGN - Institut National de l'Information Géographique et Forestière</p></div>
+					<div class="col-sm-12"><p>Copyright &copy; 2015 - 2016 IGN - Institut National de l'Information Géographique et Forestière</p></div>
 			</div>
 		</div>
 	</section>
