--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ Related projects :<br /><br />
 
 					<article class="col-md-4 isotopeItem images">
 								<div class="portfolio-item">
-									<img src="img/gallerie/red.png" alt="" />
+									<img src="img/gallerie/vert.png" alt="" />
 									<div class="portfolio-desc align-center">
 										<div class="folio-info">
 											<h5 class="languageFr"><a href="img/gallerie/discret_pr_opaque_sans_aretes.png">Délimitation des étages par la symbologie</a></h5>
