Update with JR posters

--- a/index.html
+++ b/index.html
@@ -95,8 +95,13 @@
 		<!--</div>-->
 		<!-- ACTUS -->
         <div class="container">
-			<p class="languageFr">6-9/12/2016: <strong>Présentation d'un poster <a href="#"> Projet PLU++ : vers un Plan Local d’Urbanisme plus intelligible et plus participatif </a> à la conférence <a href="https://sageo2016.sciencesconf.org/">Sagéo 2016 </a> à Nice. </p>
-			<p class="languageEn">6-9/12/2016: <strong>Presentation of a poster <a href="#"> Projet PLU++ : vers un Plan Local d’Urbanisme plus intelligible et plus participatif </a> during  <a href="https://sageo2016.sciencesconf.org/">Sagéo 2016 </a> inNice. </p>
+
+			<p class="languageFr">23-24/03/2017: <strong>Présentation du projet <a href="http://recherche.ign.fr/jr/jr17/resumes/Brasebin_23_03.pdf"> Projet PLU++ : vers un Plan Local d’Urbanisme plus intelligible et plus participatif </a> aux journées  <a href="http://recherche.ign.fr/jr/jr17.php">de la recherche de l'IGN 2017</a>. </p>
+		<p class="languageEn">23-24/03/2017: <strong>Presentation of <a href="http://recherche.ign.fr/jr/jr17/resumes/Brasebin_23_03.pdf"> Projet PLU++ : vers un Plan Local d’Urbanisme plus intelligible et plus participatif </a> during the  <a href="http://recherche.ign.fr/jr/jr17.php">IGN research days 2017</a>. </p>
+
+
+			<p class="languageFr">6-9/12/2016: <strong>Présentation d'un poster <a href="http://recherche.ign.fr/labos/util_basilic/publicDownload.php?id=3868"> Projet PLU++ : vers un Plan Local d’Urbanisme plus intelligible et plus participatif </a> à la conférence <a href="https://sageo2016.sciencesconf.org/">Sagéo 2016 </a> à Nice. (Prix du meilleur poster de la conférence) </p>
+			<p class="languageEn">6-9/12/2016: <strong>Presentation of a poster <a href="http://recherche.ign.fr/labos/util_basilic/publicDownload.php?id=3868"> Projet PLU++ : vers un Plan Local d’Urbanisme plus intelligible et plus participatif </a> during  <a href="https://sageo2016.sciencesconf.org/">Sagéo 2016 </a> (Best poster award) in Nice. </p>
 			<p class="languageFr">20/10/2016: <strong>Présentation <a href="http://www.slideshare.net/MBrasebin/schristophe3dgeoinfo2016"> 3D geovisualization & stylization to manage comprehensive and participative local urban plans </a> à la conférence <a href="http://3dathens2016.gr/site/">10e conférence 3D GeoInfo </a> à Athènes. </p>
 			<p class="languageEn">20/10/2016: <strong>Presentation <a href="http://www.slideshare.net/MBrasebin/schristophe3dgeoinfo2016"> 3D geovisualization & stylization to manage comprehensive and participative local urban plans</a> during the <a href="http://3dathens2016.gr/site/">10th 3D GeoInfo conference</a> in Athens. </p>
 			<p class="languageFr">20/10/2015: <strong>Présentation <a href="http://fr.slideshare.net/MBrasebin/projet-plu"> du projet PLU++</a> aux <a href="http://www.fnau.org/reseau-agences/manifestations-rencontres.asp?annee=2015">36e rencontres des agences d'urbanisme</a> à Lyon. </p>
