--- a/index.html
+++ b/index.html
@@ -846,73 +846,17 @@ Related projects :<br /><br />
 
 		<!-- contact -->
 		<section id="contact" class="section appear clearfix">
-			<div class="container">
+		<div class="row mar-bot50">
+				<div class="col-md-offset-3 col-md-6">
+					<div class="section-header">
+						<h2 class="section-heading animated languageFr" data-animation="bounceInUp">Contactez nous</h2>
+						<h2 class="section-heading animated languageEn" data-animation="bounceInUp">Contact us</h2>
+					
 
-				<div class="row mar-bot50">
-					<div class="col-md-offset-3 col-md-6">
-						<div class="section-header">
-							<h2 class="section-heading animated languageFr" data-animation="bounceInUp">Contactez nous</h2>
-							<h2 class="section-heading animated languageEn" data-animation="bounceInUp">Contact us</h2>
-						</div>
+						<p class="languageFr">mickael.brasebin@ign.fr</p>
+						<p class="languageEn">mickael.brasebin@ign.fr</p>
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2">
-						<div class="cform" id="contact-form">
-							<div id="sendmessage">
-								 <a class="languageFr">Votre message a bien été envoyé. Merci !</a>
-								 <a class="languageEn">Your message has been sent successfully. Thanks !</a>
-							</div>						
-							<form action="contact/contact.php" method="post" role="form" class="contactForm">
-							  <div class="form-group languageFr">
-								<label for="name">Votre nom</label>
-								<input type="text" name="name" class="form-control" id="name" placeholder="Votre nom" data-rule="maxlen:4" data-msg="Please enter at least 4 chars" />
-								<div class="validation"></div>
-							  </div>
-							  <div class="form-group languageEn">
-								<label for="name">Your name</label>
-								<input type="text" name="name" class="form-control" id="name" placeholder="Your name" data-rule="maxlen:4" data-msg="Please enter at least 4 chars" />
-								<div class="validation"></div>
-							  </div>							  
-							  <div class="form-group languageFr">
-								<label for="email">Votre mail</label>
-								<input type="email" class="form-control" name="email" id="email" placeholder="Votre mail" data-rule="email" data-msg="Please enter a valid email" />
-								<div class="validation"></div>
-							  </div>
-							  <div class="form-group languageEn">
-								<label for="email">Your e-mail</label>
-								<input type="email" class="form-control" name="email" id="email" placeholder="Your e-mail" data-rule="email" data-msg="Please enter a valid email" />
-								<div class="validation"></div>
-							  </div>							  
-							  <div class="form-group languageFr">
-								<label for="subject">Sujet</label>
-								<input type="text" class="form-control" name="subject" id="subject" placeholder="Sujet" data-rule="maxlen:4" data-msg="Please enter at least 8 chars of subject" />
-								<div class="validation"></div>
-							  </div>
-							  <div class="form-group languageEn">
-								<label for="subject">Subject</label>
-								<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="maxlen:4" data-msg="Please enter at least 8 chars of subject" />
-								<div class="validation"></div>
-							  </div>
-							  <div class="form-group languageFr">
-								<label for="message">Message</label>
-								<textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us"></textarea>
-								<div class="validation"></div>
-							  </div>
-							  <div class="form-group languageEn">
-								<label for="message">Message</label>
-								<textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us"></textarea>
-								<div class="validation"></div>
-							  </div>
-							  <button type="submit" class="btn btn-theme pull-left languageFr">ENVOYER</button>
-							  <button type="submit" class="btn btn-theme pull-left languageEn">SEND</button>
-							</form>
-
-						</div>
-					</div>
-					<!-- ./span12 -->
-				</div>
-
 			</div>
 		</section>
 	<a href="#header" class="scrollup"><i class="fa fa-chevron-up"></i></a>
